--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,14 +8,12 @@ on:
     branches: [ master ]
 
 
-permissions:
-  contents: read
-
 jobs:
-  print_hello:
-
+  build_and_deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Print 
-        run: echo "Hello World"
+      - name: Build Templates
+        run: go run main.go
+      - name: Deploy Stacks
+        run: python3 execute.py
+  
