--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Templates
         run: go run main.go
+      - name: install dependencies
+        run: pip3 install cfstack
       - name: Deploy Stacks
         run: python3 execute.py
   
