--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,6 +12,10 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::297012935469:role/GithubAccess
       - uses: actions/checkout@v3
       - name: Build Templates
         run: go run main.go
