--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,7 +6,10 @@ name: Python application
 on:
   push:
     branches: [ master ]
-
+    
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   build_and_deploy:
