--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,12 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Build and Deploy Pipeline
 
 on:
   push:
     branches: [ master ]
-    
+
 permissions:
   id-token: write
   contents: read
