--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::426930952145:role/AllowGithubAccessRole
-          aws-region: ap-south-1
+          role-to-assume: arn:aws:iam::736548753645:role/GithubRole
+          aws-region: us-east-1
       - uses: actions/checkout@v3
       - name: Build Templates
         run: go run main.go
