--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -158,11 +158,7 @@
             "Type":"AWS::EC2::Instance",
             "Properties":{
                 "ImageId":{
-                    "Fn::FindInMap": [
-                        "AWSAMIMapping",
-                        { "Ref": "AWS::Region" },
-                        "HVM64"
-                    ]
+                    "Ref":"SplunkAmiId"
                 },
                 "InstanceType":"t2.micro",
                 "IamInstanceProfile": {
