--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -122,15 +122,27 @@
                         ],
                         "Memory":512,
                         "Cpu":256,
-                        "LogConfiguration":{
-                            "LogDriver":"splunk",
-                            "Options":{
-                                "splunk-token":"bfbe35f9-82ed-47bc-b29b-2e08f38cbf9b",
-                                "splunk-url":"http://13.233.204.76/:8088",
-                                "splunk-source":"mywebsite",
-                                "env":"STACK_NAME"    
-                            }
-                        }
+                        "LogConfiguration": {
+                            "LogDriver": "awsfirelens",
+                            "Options": {
+                              "Host": "13.233.204.76",
+                              "Name": "splunk",
+                              "Port": "8088",
+                              "Splunk_Send_Raw": "Off",
+                              "event_host": "${HOSTNAME}",
+                              "event_index": "review-notifier",
+                              "event_source": "review-notifier-stdout",
+                              "event_sourcetype": "_json",
+                              "tls": "off",
+                              "tls.verify": "off"
+                            },
+                            "SecretOptions": [
+                              {
+                                "Name": "Splunk_Token",
+                                "Value": "5C41DC65-BBED-4611-B5AB-BE44FC06B77B"
+                              }
+                            ]
+                          }
                     },
                     {
                         "Environment": [
