Adding splunk and application

--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -117,7 +117,7 @@
                         "Environment":[
                             {
                                 "Name":"STACK_NAME",
-                                "Value": "in1"
+                                "Value": "Mu"
                             }
                         ],
                         "Memory":512,
