--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -87,7 +87,7 @@
                             "Effect": "Allow",
                             "Principal": {
                                 "Service": [
-                                    "ecs.amazonaws.com"
+                                    "ecs-tasks.amazonaws.com"
                                 ]
                             },
                             "Action": [
