Adding splunk and application

--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -274,7 +274,7 @@
                         "Privileged": false
                       }
                 ],
-                "executionRoleArn":{
+                "ExecutionRoleArn":{
                     "Ref":"ApplicationTaskIamRole"
                 },
                 "NetworkMode":"host"
