Adding splunk and application

--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -206,7 +206,7 @@
                             }
                         ],
                         "Memory":128,
-                        "Cpu":128,
+                        "Cpu":128
                     },
                     {
                         "Name":"ApplicationEcsContainer",
