--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,7 +1,8 @@
 name: verify-all-checks-are-succeeded
 run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
 on:
- check_run: [completed]
+  check_run:
+    [completed]
 jobs:  
   enforce-all-checks:
     runs-on: ubuntu-latest
