aws: Adding CLEVERTAP_PLATFORM_BOT Id and Private access key in github action secrets for ultron repo [Test]
SNE-40895, SNE-42367

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,7 +6,8 @@ name: Build and Deploy Pipeline
 on:
   push:
     branches: [ master ]
-
+  pull_request:
+    types: [opened,synchronize,reopened]
 permissions:
   id-token: write
   contents: read
