aws: Adding CLEVERTAP_PLATFORM_BOT Id and Private access key in github action secrets for ultron repo [Test]
SNE-40895, SNE-42367

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,7 +8,7 @@ jobs:
   enforce-all-checks:
     runs-on: ubuntu-latest
     permissions:
-      checks: read
+      checks: write
     steps:
       - name: Generate token
         id: generate_token
