--- a/.github/workflows/trigger_build.yml
+++ b/.github/workflows/trigger_build.yml
@@ -16,13 +16,6 @@ jobs:
           private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
       - name: Get Combined Commit Status
         run: |
-          status=-1
-          while [ $status == -1 ]
-          do
-            result=$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \ https://api.github.com/repos/CleverTap-Platform/Ultron/commits/${{ github.sha }}/status | jq '.state')
-            if [ $result == "success"]
-              exit 0
-            if [ $result == "failure"]
-              exit 1
-          done
+          echo ${{ steps.generate_token.outputs.token }}
+          curl -L -H "Accept: application/vnd.github+json" -X POST -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" -d '{"state":"pending","target_url":"https://google.com","description":"The build pending","context":"continuous-integration/macha"}'  https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/statuses/${{ github.sha }}
           
