aws: Adding CLEVERTAP_PLATFORM_BOT Id and Private access key in github action secrets for ultron repo [Test]
SNE-40895, SNE-42367

--- a/.github/workflows/trigger_build.yml
+++ b/.github/workflows/trigger_build.yml
@@ -1,4 +1,4 @@
-name: verify-all-checks-are-succeeded
+name: trigger_status
 run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
 on:
   pull_request:
