--- a/.github/workflows/trigger_build.yml
+++ b/.github/workflows/trigger_build.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     types:
       [opened, synchronize, reopened]
+permissions:
+  check: write
 jobs: 
   enforce-all-checks:
     runs-on: ubuntu-latest
