--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,10 +20,10 @@ jobs:
           while [ $status == -1 ]
           do
             result=$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \ https://api.github.com/repos/CleverTap-Platform/Ultron/commits/${{ github.sha }}/status | jq '.state')
-            if [ $result == "success"]
+            if [ $result == "success"]; then
               exit 0
             fi
-            if [ $result == "failure"]
+            if [ $result == "failure"]; then 
               exit 1
             fi
           done
