--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -1,11 +1,11 @@
-name: verify-all-checks-are-succeeded
+name: check1
 run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
 on:
   pull_request:
     types:
       [opened, synchronize, reopened]
 jobs: 
-  enforce-all-checks:
+check1:
     runs-on: ubuntu-latest
     steps:
       - name: Generate token
@@ -14,7 +14,7 @@ jobs:
         with:
           app_id: ${{ secrets.CLEVERTAP_PLATFORM_BOT_ID }}
           private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
-      - name: Get Combined Commit Status
+      - name: Get Combined Check status
         run: |
           status=-1
           while [ $status == -1 ]
