--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -5,7 +5,7 @@ on:
     types:
       [opened, synchronize, reopened]
 jobs: 
-check1:
+  combinedcheckstatus:
     runs-on: ubuntu-latest
     steps:
       - name: Generate token
