--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -16,16 +16,6 @@ jobs:
           private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
       - name: Get Combined Check status
         run: |
-          status=-1
-          while [ $status == -1 ]
-          do
-            result=$(curl  -vvv -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/status | jq '.state')
-            if [ "$result" == "success" ]; then
-              exit 0
-            fi
-            if [ "$result" == "failure" ]; then 
-              exit 1
-            fi
-          done
+          curl  -vvv -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/status
           
