--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -16,6 +16,7 @@ jobs:
           private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
       - name: Get Combined Check status
         run: |
-          curl  -vvv -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/status
+          statuses=$(curl  -vvv -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/statuses/${{ github.sha }})
+          echo $statuses
           
