--- a/.github/workflows/check2.yml
+++ b/.github/workflows/check2.yml
@@ -1,9 +1,9 @@
 name: check2
 run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
 on:
-  pull_request:
+  workflow_run:
     types:
-      [opened, synchronize, reopened]
+      [completed]
 jobs: 
   check2:
     runs-on: ubuntu-latest
@@ -22,4 +22,5 @@ jobs:
           -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/statuses/${{ github.sha }} \
-          -d '{"state":"success","target_url":"https://clevertap.com/","description":"The build succeeded!","context":"success/check2/ultron"}'
+          -d '{"state":"success","target_url":"https://clevertap.com/","description":"The build succeeded!","context":"success/check2/ultron"}' \
+          | jq "."
