--- a/.github/workflows/check2.yml
+++ b/.github/workflows/check2.yml
@@ -22,5 +22,5 @@ jobs:
           -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/statuses/${{ github.sha }} \
-          -d '{"state":"success","target_url":"https://clevertap.com/","description":"The build succeeded!","context":"success/check2/ultron"}' \
+          -d '{"state":"pending","target_url":"https://clevertap.com/","description":"The build succeeded!","context":"success/check2/ultron"}' \
           | jq "."
