--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -18,5 +18,10 @@ jobs:
         run: |
           statuses=$(curl  -vvv -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/status)
-          echo $statuses
-          
+          state=$(echo $statuses | jq ".state")
+          if [[ "$state" == "success"  ]]
+          then
+            exit 0
+          elif [[ "$state" == "failure"  ]]
+            exit 1
+          fi       
