--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -19,12 +19,12 @@ jobs:
           statuses=$(curl  -vvv -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/status)
           state=$(echo $statuses | jq ".state")
-          if [[ "$state" == "success"  ]];
+          if [ "$state" = "success"  ]];
           echo $statuses
           then
             echo "In If $state"
             exit 0
-          elif [[ "$state" == "failure"  ]];
+          elif [[ "$state" = "failure"  ]];
           then
             echo "In else"
             exit 1
