--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -16,16 +16,19 @@ jobs:
           private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
       - name: Get Combined Check status
         run: |
-          statuses=$(curl  -vvv -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/status)
-          state=$(echo $statuses | jq ".state")
-          echo $statuses
           status1="success"
           status2="failure"
-          if [ "$state" = "$status1"  ]; then
-            echo "In If $state"
-            exit 0
-          elif [ "$state" = "$status2"  ]; then
-            echo "In else"
-            exit 1
-          fi       
+          status3="pending"
+          state="pending"
+          while [ "$state" = "$status3"  ]
+          do 
+            statuses=$(curl  -vvv  -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/status)
+            state=$(echo $statuses | jq ".state")
+            echo $statuses
+            if [ "$state" = "$status1"  ]; then
+              exit 0
+            elif [ "$state" = "$status2"  ]; then
+              exit 1
+            fi       
+          done
