--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -20,7 +20,7 @@ jobs:
           status2="failure"
           status3="pending"
           state="pending"
-          while [ "$state" = "$status3"  ]
+          while [ "$state" = "$status3"  ];
           do 
             statuses=$(curl  -vvv  -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/status)
