--- a/.github/workflows/check2.yml
+++ b/.github/workflows/check2.yml
@@ -21,6 +21,5 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/statuses/${{ github.sha }} \
-          -d '{"state":"pending","target_url":"https://clevertap.com/","description":"The build succeeded!","context":"success/check2/ultron"}' \
-          | jq "."
+          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
+          -d '{"name":"check2","head_sha":${{ github.sha }},"status":"in_progress","output":{"checkname":"checking2"}}'
