--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -22,10 +22,16 @@ jobs:
           state="pending"
           while true;
           do 
-            statuses=$(curl  -vvv  -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-runs | jq '.check_runs | map(.status)' )
-            conclusions=$(curl  -vvv  -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-runs | jq '.check_runs | map(.conclusion)' )
+            conclusions=""
+            while [ -z "$conclusions" ]; do
+              conclusionse=$(curl  -vvv  -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq '.check_suites | map(.conclusion) | select (all(.; . != null))' )
+              if [ -z "$conclusions" ]; then
+                echo "No non-null conclusions found. Retrying..."
+                sleep 5  # Adjust the sleep duration as needed
+              fi
+            done
+            conclusions=$()
             echo $statuses
             echo $conclusions     
           done
