--- a/.github/workflows/check1.yml
+++ b/.github/workflows/check1.yml
@@ -16,7 +16,7 @@ jobs:
           private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
       - name: Create Check1 status
         run: |
-          echo ${{ steps.generate_token.outputs.token }}" 
+          echo ${{ steps.generate_token.outputs.token }} 
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
