--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -19,19 +19,14 @@ jobs:
           status1="success"
           status2="failure"
           status3="pending"
-          state="pending"
+          conclusions=""
           while true;
           do 
-            conclusions=""
-            while [ -z "$conclusions" ]; do
-              conclusionse=$(curl  -vvv  -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq '.check_suites | map(.conclusion) | select (all(.; . != null))' )
-              if [ -z "$conclusions" ]; then
-                echo "No non-null conclusions found. Retrying..."
-                sleep 5  # Adjust the sleep duration as needed
-              fi
-            done
-            conclusions=$()
-            echo $statuses
-            echo $conclusions     
+            conclusions=$(curl  -vvv  -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
+                          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq '.check_suites | map(.conclusion) | .[0]' )
+            if [ "$conclusions" == "$status1" ]; then
+              exit 0
+            elif [ "$conclusions" == "$status2" ]; then
+              exit 1
+            fi
           done
