--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -23,7 +23,7 @@ jobs:
           while true;
           do 
             conclusions=$(curl  -vvv  -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
-                          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq '.check_suites | map(.conclusion)' )
+                          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq '.check_suites | .[0].conclusion' )
             if [ "$conclusions" == "$status1" ]; then
               exit 0
             elif [ "$conclusions" == "$status2" ]; then
