--- a/.github/workflows/check2updater.yml
+++ b/.github/workflows/check2updater.yml
@@ -2,6 +2,11 @@ name: check2updater
 run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
 on:
   workflow_dispatch:
+    inputs:
+      commit_sha:
+        description: Check status of commit sha to be updated
+        required: true
+        type: string
 jobs: 
   check2:
     runs-on: ubuntu-latest
@@ -20,4 +25,4 @@ jobs:
           -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
-          -d "{\"name\":\"check2\",\"head_sha\":\"${{ github.sha }}\",\"status\":\"completed\",\"conclusion\":\"success\"}"
+          -d "{\"name\":\"check2\",\"head_sha\":\"${{ inputs.commit_sha }}\",\"status\":\"completed\",\"conclusion\":\"success\"}"
