--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -22,8 +22,9 @@ jobs:
           conclusions=""
           while true;
           do 
-            conclusions=$(curl  -vvv  -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
+            conclusions=$(curl  -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
                           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq '.check_suites' )
+            echo "$conclusions"
             if [ "$conclusions" == "$status1" ]; then
               exit 0
             elif [ "$conclusions" == "$status2" ]; then
