--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -23,7 +23,7 @@ jobs:
           while true;
           do 
             conclusions=$(curl  -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
-                          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq '.check_suites | .[0] | -r .conclusion' )
+                          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq -r '.check_suites | .[0] |  .conclusion' )
             echo "$conclusions"
             if [ "$conclusions" == "$status1" ]; then
               exit 0
