--- a/.github/workflows/check2updater.yml
+++ b/.github/workflows/check2updater.yml
@@ -7,6 +7,10 @@ on:
         description: Check status of commit sha to be updated
         required: true
         type: string
+      updated_status:
+        description: The status to updte to
+        required: true
+        type: string
 jobs: 
   check2:
     runs-on: ubuntu-latest
@@ -25,4 +29,4 @@ jobs:
           -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
-          -d "{\"name\":\"check2\",\"head_sha\":\"${{ inputs.commit_sha }}\",\"status\":\"completed\",\"conclusion\":\"success\"}"
+          -d "{\"name\":\"check2\",\"head_sha\":\"${{ inputs.commit_sha }}\",\"status\":\"completed\",\"conclusion\":\"${{ inputs.updated_status }}\"}"
