--- a/.github/workflows/check1updater.yml
+++ b/.github/workflows/check1updater.yml
@@ -31,3 +31,5 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
           -d "{\"name\":\"check1\",\"head_sha\":\"${{ inputs.commit_sha }}\",\"status\":\"completed\",\"conclusion\":\"${{ inputs.updated_status }}\"}"
+          git tag  ${{ inputs.commit_sha }} -m ${{ inputs.updated_status }}
+          git push --tags origin
