--- a/.github/workflows/check1updater.yml
+++ b/.github/workflows/check1updater.yml
@@ -31,11 +31,12 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
           -d "{\"name\":\"check1\",\"head_sha\":\"${{ inputs.commit_sha }}\",\"status\":\"completed\",\"conclusion\":\"${{ inputs.updated_status }}\"}"
-      - name: Push Tags=
+      - name: Checkout repo
         uses: actions/checkout@v4
         with: 
           path: cloudformation
           token: ${{ steps.generate_token.outputs.token }}
+      - name: Push Tags
         run: |
           cd cloudformation
           git tag  ${{ inputs.commit_sha }} -m ${{ inputs.updated_status }}
