Testing pr5 with status

--- a/.github/workflows/check1updater.yml
+++ b/.github/workflows/check1updater.yml
@@ -41,5 +41,5 @@ jobs:
           git config --global user.email "yashdeep@clevertap.com"
           git config --global user.name "Yashdeep Shetty"
           cd cloudformation
-          git tag  ${{ inputs.commit_sha }} -m ${{ inputs.updated_status }}
+          git tag  -a "v${{ inputs.commit_sha }}" ${{ inputs.commit_sha }} -m "${{ inputs.updated_status }}"
           git push --tags origin
