--- a/.github/workflows/check1updater.yml
+++ b/.github/workflows/check1updater.yml
@@ -42,5 +42,5 @@ jobs:
           git config --global user.email "yashdeep@clevertap.com"
           git config --global user.name "Yashdeep Shetty"
           git checkout ${{ github.head_ref }}
-          git tag  -a  -m "${{ inputs.updated_status }}" "${{ inputs.commit_sha }}" 
-          git push --tags origin
+          git tag  -a "${{ github.head_ref || github.ref_name }}-${{ github.run_number }}" -m "${{ inputs.updated_status }}" "${{ inputs.commit_sha }}" 
+          git push  origin "${{ github.head_ref || github.ref_name }}-${{ github.run_number }}"
