Testing pr5 with status

--- a/.github/workflows/check1updater.yml
+++ b/.github/workflows/check1updater.yml
@@ -47,7 +47,8 @@ jobs:
           git config --global user.name "Yashdeep Shetty"
           
           branch=${{ github.head_ref || github.ref_name }}
-          
+          git checkout $branch
+
           git log --oneline
           echo "Branch: $branch"
           echo "Commit SHA: ${{ inputs.commit_sha }}"
