--- a/.github/workflows/check1updater.yml
+++ b/.github/workflows/check1updater.yml
@@ -47,8 +47,9 @@ jobs:
           git config --global user.name "Yashdeep Shetty"
           
           branch=${{ github.head_ref || github.ref_name }}
+          git log --oneline
           git checkout $branch
-
+          git pull --rebase
           git log --oneline
           echo "Branch: $branch"
           echo "Commit SHA: ${{ inputs.commit_sha }}"
