--- a/.github/workflows/check1updater.yml
+++ b/.github/workflows/check1updater.yml
@@ -43,9 +43,11 @@ jobs:
       - name: Push Tags
         run: |
           cd cloudformation
+  
           git config --global user.email "yashdeep@clevertap.com"
           git config --global user.name "Yashdeep Shetty"
-          
+
+          git fetch origin        
           branch=${{ github.head_ref || github.ref_name }}
           git log --oneline
           git checkout $branch
