--- a/.github/workflows/check1.yml
+++ b/.github/workflows/check1.yml
@@ -23,4 +23,4 @@ jobs:
           -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
-          -d "{\"name\":\"check1\",\"head_sha\":\"${{ github.sha }}\",\"status\":\"in_progress\"}"
+          -d "{\"name\":\"check1\",\"head_sha\":\"${{ github.event.pull_request.head.sha }}\",\"status\":\"in_progress\"}"
